Commit: removed redundant getters